File Browser crash on large image previews #45451

Closed
opened 2015-07-15 21:39:23 +02:00 by Jason van Gumster · 14 comments

System Information
Arch Linux (64-bit); Nvidia Quadro K5000M

Blender Version
Broken: 2.75 e6364c6
Worked: 2.74 (and likely 2.75a; have not yet tested, though)

Short description of error
When looking at large images (in my case, 16-bit PNG with a resolution of 1200x4000) in the File Browser with thumbnail display, Blender will crash.

Exact steps for others to reproduce the error
I don't have a .blend file to share, but I have attached a gdb backtrace.image_preview_crash-backtrace.txt

**System Information** Arch Linux (64-bit); Nvidia Quadro K5000M **Blender Version** Broken: 2.75 e6364c6 Worked: 2.74 (and likely 2.75a; have not yet tested, though) **Short description of error** When looking at large images (in my case, 16-bit PNG with a resolution of 1200x4000) in the File Browser with thumbnail display, Blender will crash. **Exact steps for others to reproduce the error** I don't have a .blend file to share, but I have attached a gdb backtrace.[image_preview_crash-backtrace.txt](https://archive.blender.org/developer/F207330/image_preview_crash-backtrace.txt)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @JasonvanGumster

Added subscriber: @JasonvanGumster

Added subscriber: @mont29

Added subscriber: @mont29

Can you please upload somewhere (google drive, dropbox, …) one of those big files? Backtrace does not help much as is, crashes in OpenGL driver it seems, probably generated thumbnail is invalid somehow but we need to be able to reproduce the crash to investigate.

Can you please upload somewhere (google drive, dropbox, …) one of those big files? Backtrace does not help much as is, crashes in OpenGL driver it seems, probably generated thumbnail is invalid somehow but we need to be able to reproduce the crash to investigate.

Added subscriber: @sindra1961

Added subscriber: @sindra1961

I cannot reproduce this here(win32).
screen.png
bit depth of example.png is 24.
bit depth of example2.png is 64.
Both image size is 1200x4000.

example.png
example.png
example2.png
example2.png
version 2.75 (sub 2), branch b'master', commit date b'2015-07-14' b'21:49', hash b'dfd383c', b'Release'

I cannot reproduce this here(win32). ![screen.png](https://archive.blender.org/developer/F207367/screen.png) bit depth of example.png is 24. bit depth of example2.png is 64. Both image size is 1200x4000. example.png ![example.png](https://archive.blender.org/developer/F207373/example.png) example2.png ![example2.png](https://archive.blender.org/developer/F207375/example2.png) version 2.75 (sub 2), branch b'master', commit date b'2015-07-14' b'21:49', hash b'dfd383c', b'Release'
Author
Member

Just did some additional checks and it's not about the image size. It's specifically about bit-depth I think. The attached image is a 16-bit PNG (generated by Blender, BTW) and it consistently crashes Blender for me in thumbnail view on the File Browser.

jellyfish-veins.png

Just did some additional checks and it's not about the image size. It's specifically about bit-depth I think. The attached image is a 16-bit PNG (generated by Blender, BTW) and it consistently crashes Blender for me in thumbnail view on the File Browser. ![jellyfish-veins.png](https://archive.blender.org/developer/F207435/jellyfish-veins.png)
Bastien Montagne self-assigned this 2015-07-16 16:45:52 +02:00

OK, do not get any crash here, but I can confirm something is bad here - I think the generated thumbnail PNG is not read correctly for some reason, because the first time, when preview is generated and hence thumbnail imbuf is not read from cached thumbnails png, everything is OK. It’s when reloading that issue arise (here it shows a part of the splash it seems).

Will investigate.

OK, do not get any crash here, but I can confirm something is bad here - I think the generated thumbnail PNG is not read correctly for some reason, because the first time, when preview is generated and hence thumbnail imbuf is *not* read from cached thumbnails png, everything is OK. It’s when reloading that issue arise (here it shows a part of the splash it seems). Will investigate.

This issue was referenced by f2087b4830

This issue was referenced by f2087b4830b2f59188e9c604450db5f37b6d472a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @jason-10

Added subscriber: @jason-10

@jason-10 would expect the issue to be fully fixed with this commit, but please confirm this…

@jason-10 would expect the issue to be fully fixed with this commit, but please confirm this…

Removed subscriber: @jason-10

Removed subscriber: @jason-10
Author
Member

Much appreciated @mont29. I just recompiled and tested. No crashes now. Thanks!

Much appreciated @mont29. I just recompiled and tested. No crashes now. Thanks!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45451
No description provided.